Fixed an issue with cards distorting on smaller screens due to clashing classes. Also narrowed down and added personal links to social section, also uploaded card images all in same resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,21 +48,13 @@ body{
      letter-spacing: 2px;
  }
 
- /* .underwriting{
-     font-size: 18px;
-     color: #fafafa;
-     word-spacing: 10px;
-     justify-content: center;
-     text-align: center;
- } */
-
 
  hr{
      height: 2px;
      width: 120px;
      margin-left: auto;
      margin-right: auto;
-     background-color: #fafafa/* #181818 */;
+     background-color: #fafafa;
      opacity: 0.7;
  }
 
@@ -291,13 +283,6 @@ body{
   }
 }
 
-/* @media (min-width: 576px){
-    .card-deck .card{
-        flex 0 0 0%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-} */
 
 /* ------------------------------Skills */
 
@@ -331,22 +316,18 @@ body{
     height: auto;
 }
 
-.card-container{
+.card-deck{
     padding: 40px 35px;
-    align-items: center;
 }
-
 .card-body{
     background-color: #181818;
     color: #fafafa;
     font-family: "Montserrat", sans-serif;
+    font-size: 1rem;
 }
 
 .card{
     border: none !important;
-    width: 270px;
-    height: 295px;
-    overflow: scroll;
 }
 
 
